# toronto-bikeshare-map

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
data/geojsons/: station_information.json
notebooks/: bikeshare.ipynb  eda.ipynb
