[tool.poetry]
name = "toronto-bikeshare-map"
version = "0.1.0"
description = "Visualizes the bikeshare trips in Toronto using monthly ridership data sourced from Open Toronto"
authors = ["victor <vykuang92@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
ipykernel = "^6.29.3"
pre-commit = "^3.6.2"
folium = "^0.16.0"
ipython-sql = "^0.5.0"
geoalchemy2 = "^0.14.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
